# clipper

./: CONTRIBUTING.md  README.md  clipmind.toml  pyproject.toml  requirements.txt
clipmind/: __init__.py
clipmind/src/cli/: interface.py
clipmind/src/core/: __init__.py  audio_extractor.py  video_tools.py
clipmind/src/core/validation/: video_validators.py
clipmind/src/utils/: __init__.py  ai_utils.py  decorators.py  language.py  redis.py  resolution.py  validation.py
clippy/: __init__.py
clippy/src/core/: video_tools.py
clippy/src/utils/: ai_utils.py
